fix vertical align

--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -21,6 +21,7 @@ header {
 
     justify-content: space-between;
     align-items: center;
+    align-items: baseline;
 
     .header-left-part {
         .inline-elements();
@@ -30,6 +31,16 @@ header {
     .header-right-part {
         .inline-elements();
         margin-right: @header-margin;
+    }
+
+    p {
+        font-size: 1.15rem;
+        line-height: 1;
+    }
+
+    a {
+        font-size: 0.9rem;
+        line-height: 1;
     }
 }
 
